--- a/MC_Board.ioc
+++ b/MC_Board.ioc
@@ -30,7 +30,9 @@ Dma.Request0=USART2_TX
 Dma.Request1=USART2_RX
 Dma.Request2=SPI2_RX
 Dma.Request3=SPI2_TX
-Dma.RequestsNb=4
+Dma.Request4=UART5_RX
+Dma.Request5=UART5_TX
+Dma.RequestsNb=6
 Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI2_RX.2.Instance=DMA1_Stream3
@@ -51,6 +53,26 @@ Dma.SPI2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_TX.3.Priority=DMA_PRIORITY_HIGH
 Dma.SPI2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART5_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART5_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART5_RX.4.Instance=DMA1_Stream0
+Dma.UART5_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART5_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.UART5_RX.4.Mode=DMA_NORMAL
+Dma.UART5_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART5_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.UART5_RX.4.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.UART5_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART5_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART5_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART5_TX.5.Instance=DMA1_Stream7
+Dma.UART5_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART5_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.UART5_TX.5.Mode=DMA_NORMAL
+Dma.UART5_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART5_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.UART5_TX.5.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.UART5_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.1.Instance=DMA1_Stream5
@@ -73,7 +95,7 @@ Dma.USART2_TX.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.USART2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,configTOTAL_HEAP_SIZE,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,3000,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;LEDTask,8,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;UART_TEST,8,256,StartTask03,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configTOTAL_HEAP_SIZE=46080
 File.Version=6
@@ -166,10 +188,12 @@ NVIC.CAN1_RX0_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true\:true
 NVIC.CAN1_TX_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true\:true
 NVIC.CAN2_RX0_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true\:true
 NVIC.CAN2_TX_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true\:true
 NVIC.EXTI3_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true\:true
@@ -393,7 +417,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM7_Init-TIM7-false-HAL-true,18-MX_USART3_UART_Init-USART3-false-HAL-true,19-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM7_Init-TIM7-false-HAL-true,18-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=42000000
